[package]
name = "terraria-recipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
unicode-width = "0.1"